--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,36 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+/* BODY */
+    body{
+        font-family: 'Roboto', sans-serif;
+        font-family: 'Ubuntu', sans-serif;
+    }
+/* FINE BODY */
+
+/* HEADER */
+    header{
+        background-color: white;
+    }
+
+    #header-container{
+        margin: 15px 30px;  
+    }
+
+    .header{
+        vertical-align: middle;
+    }
+
+    .logo{
+        width: 80px;
+        height: 80px;
+    }
+
+    .titolo{
+        display: inline-block;
+
+        font-size: 50px;
+        margin-left: 10px;
+    }
+/* FINE HEADER */
