--- a/css/style.css
+++ b/css/style.css
@@ -36,3 +36,55 @@
         margin-left: 10px;
     }
 /* FINE HEADER */
+
+/* MAIN */
+    main{
+        background-color: rgba(211, 211, 211, 0.522);
+    }
+    /* MAIN CONTAINER */
+        #container{
+            width: 65%;
+            margin: 0 auto;
+            padding-top: 3%;
+        }
+    /* FINE MAIN CONTAINER */
+    /* INPUT CONTAINER */
+        #input-container{
+            background-color: white;
+
+            border: 2px solid rgba(211, 211, 211, 0.522);
+            border-top-left-radius: 10px;
+            border-top-right-radius: 10px;
+
+            padding: 15px 80px;
+        }
+        /* BUTTON 1 */
+            #button-1{
+                padding: 7px 15px;
+
+                font-weight: bold;
+
+                border: 2px solid rgba(0, 145, 255, 0.845);
+                border-radius: 5px;
+
+                background-color: rgba(0, 145, 255, 0.845);
+                color: white;
+            }
+        /* FINE BUTTON 1 */
+        /* BUTTON 2 */
+            #button-2{
+                padding: 7px 15px;
+                margin-left: 5px;
+
+                font-weight: bold;
+                
+                border: 2px solid rgb(159, 159, 159);
+                border-radius: 5px;
+
+                background-color: white;
+                color: rgb(159, 159, 159);
+                
+            }
+        /* FINE BUTTON 2 */
+    /* FINE INPUT CONTAINER */
+/* FINE MAIN */
