--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,9 @@
         #container{
             width: 65%;
             margin: 0 auto;
+
             padding-top: 3%;
+            padding-bottom: 1%;
         }
     /* FINE MAIN CONTAINER */
     /* INPUT CONTAINER */
@@ -87,4 +89,21 @@
             }
         /* FINE BUTTON 2 */
     /* FINE INPUT CONTAINER */
+    /* LIST CONTAINER */
+        #list-container{
+            background-color: white;
+
+            border: 2px solid rgba(211, 211, 211, 0.522);
+            border-bottom-left-radius: 10px;
+            border-bottom-right-radius: 10px;
+
+            padding: 30px 80px;
+        }
+        /* TITOLO SECTION */
+            .titolo-section{
+                font-size: 30px;
+                margin-bottom: 3%;
+            }
+        /* FINE TITOLO SECTION */
+    /* FINE LIST CONTAINER */
 /* FINE MAIN */
