--- a/css/style.css
+++ b/css/style.css
@@ -125,20 +125,104 @@
         /* ENTITY CHECK */
             .entity-check{
                 padding: 1px 5px;
-                margin-right: 10px;
-                color: lime;
-                border: 1px solid lime;
+                margin-right: 15px;
+                color: rgb(23, 211, 13);
+                border: 1px solid rgb(23, 211, 13);
                 border-radius: 50%;
             }
         /* FINE ENTITY CHECK */
         /* ENTITY CROSS */
             .entity-cross{
                 padding: 1px 5px;
-                margin-right: 10px;
+                margin-right: 15px;
                 color: red;
                 border: 1px solid red;
                 border-radius: 50%;
             }
         /* FINE ENTITY CROSS */
+        /* LABEL 1 */
+            .label-1{
+                padding: 7px 15px;
+                margin-left: 5px;
+    
+                font-size: 15px;
+    
+                border: 1px solid rgba(0, 145, 255, 0.845);
+                border-radius: 50px;
+    
+                color: white;
+                background-color: rgba(0, 145, 255, 0.845);
+            }
+        /* FINE LABEL 1 */
+        /* LABEL 2 */
+            .label-2{
+                padding: 7px 15px;
+                margin-left: 5px;
+
+                font-size: 15px;
+
+                border: 1px solid rgba(115, 0, 255, 0.845);
+                border-radius: 50px;
+
+                color: white;
+                background-color: rgba(115, 0, 255, 0.845);
+            }
+        /* FINE LABEL 2 */
+        /* LABEL 3 */
+            .label-3{
+                padding: 7px 15px;
+                margin-left: 5px;
+
+                font-size: 15px;
+
+                border: 1px solid rgba(55, 142, 9, 0.845);
+                border-radius: 50px;
+
+                color: white;
+                background-color: rgba(55, 142, 9, 0.845);
+            }
+        /* FINE LABEL 3 */
+        /* LABEL 4 */
+            .label-4{
+                padding: 7px 15px;
+                margin-left: 5px;
+
+                font-size: 15px;
+
+                border: 1px solid rgb(255, 174, 0);
+                border-radius: 50px;
+
+                color: white;
+                background-color: rgb(255, 174, 0);
+            }
+        /* FINE LABEL 4 */
+        /* LABEL 5 */
+            .label-5{
+                padding: 7px 15px;
+                margin-left: 5px;
+
+                font-size: 15px;
+
+                border: 1px solid rgb(255, 0, 255);
+                border-radius: 50px;
+
+                color: white;
+                background-color: rgb(255, 0, 255);
+            }
+        /* FINE LABEL 5 */
+        /* LABEL 6 */
+            .label-6{
+                padding: 7px 15px;
+                margin-left: 5px;
+
+                font-size: 15px;
+
+                border: 1px solid rgb(157, 195, 19);
+                border-radius: 50px;
+
+                color: white;
+                background-color: rgb(157, 195, 19);
+            }
+            /* FINE LABEL 6 */
     /* FINE LIST CONTAINER */
 /* FINE MAIN */
